--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
 }
-
+html{
+  overflow-x: hidden;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -16,6 +18,7 @@ code {
 /*******************footer***********************************************/
 
 .footer{
+  min-width: 100%;
   background-color: black;
   color: white;
   padding: 20px 0px;
@@ -44,13 +47,13 @@ nav{
  border-image-source: linear-gradient(to left, #97c74e, #2ab9a5);
 }
 .div-header{
-  width:80%;
   height: 100%;
-  margin:0 auto;
+  margin:0;
   display: flex;
   flex-direction: row;
   justify-content:space-between;
   align-items: center;
+  padding: 0px;
 }
 .navLink{
   display: flex;
@@ -58,10 +61,11 @@ nav{
   align-items: center;
 }
 .logo,.link{
-  padding:0 10px;
+  padding:0px;
 }
-
-
+.main-nav{
+  margin:0 10% ;
+}
 .mediaimage{
   width: 200px;
   height: 200px;
@@ -208,6 +212,7 @@ overflow-x: scroll;
   width: 100%;
   height: 500px;
   object-fit: cover;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
 }
 .fade{
   opacity: 0.1;
@@ -305,14 +310,20 @@ overflow-x: scroll;
   .dropdown:hover .drop{
     display: block;
   }
+  .slideshow{
+    margin-top: 20px;
+  }
+
 }
 .blog{
   width: 100%;
   height: 100%;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
 }
 .heading-text-4{
-  margin: 0px 0px 20px 0px;
   color:#8ee4af;
+  margin: 0px;
+  line-height: 2;
 }
 .breadcrumb{
   background-color: inherit;
@@ -320,4 +331,9 @@ overflow-x: scroll;
 .brandlogo{
   width: 70px;
   height: 55px;
+}
+.link-section{
+  padding-left: 40px;
+  padding-right: 0px;
+  margin-right: 0px;
 }
