--- a/src/index.css
+++ b/src/index.css
@@ -364,3 +364,20 @@ overflow-x: scroll;
   top: 40%;
   left: 37%;
 }
+.navLink>a{
+  margin-left: 20px;
+}
+.facebook{
+  color: white;
+  position: absolute;
+  top:50%;
+  left: 50%;
+}
+.cont{
+  width: 50px;
+  height: 50px;
+  background-image: linear-gradient(to right, #1876f2, #2ab9a5 );
+  border-radius: 100%;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
+  position: relative;
+}
