--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ code {
 nav{
   height: 60px;
   width: 100%;
-  background-color: #f7f7f7 ;
+  background-color: #ffffff ;
   border-top: 5px solid;
   border-image-slice: 1;
  border-image-source: linear-gradient(to left, #97c74e, #2ab9a5);
@@ -194,7 +194,7 @@ nav{
 .homenav{
 margin-top: -50px;
 z-index: 100;
-overflow-x: scroll;
+box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
 }
 .homenav li{
   margin: auto 5px;
@@ -423,4 +423,28 @@ overflow-x: scroll;
 }
 .year button:disabled{
   opacity: 0.3;
+}
+
+/*****************/
+.nav_pos{
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+.link{
+  color: #1BA94C;
+}
+.link:hover{
+  color: #1876f2;
+  background-color: #f7f7f7;
+  text-decoration: none;
+}
+.link:focus{
+  color: red;
+}
+@media (max-width:1000px){
+  .homenav{
+    overflow-x: scroll;
+    box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
+  }
 }
