--- a/src/index.css
+++ b/src/index.css
@@ -450,3 +450,6 @@ box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
     box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
   }
 }
+.details{
+  margin: 60px 10px;
+}
