--- a/src/index.css
+++ b/src/index.css
@@ -432,6 +432,7 @@ box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
   position: fixed;
   top: 0;
   z-index: 1000;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
 }
 .link{
   color: #1BA94C;
