--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,7 +1,7 @@
 .main_nav{
     width: 100%;
     height: 70px;
-    background-color: #f1f3f4;
+    background-color: white;
 }
 .main_nav .container{
     display: flex;
