--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10,6 +10,7 @@
       flex: 1;
       flex-direction: column;
       justify-content: center;
+      margin-left: 80px;
   }
   
   .hero_text h1::first-letter{
@@ -63,5 +64,9 @@
 @media (max-width:1100px){
     .hero{
         flex-direction: column-reverse;
+      }
+      .hero_text{
+        margin-left: 0px;
+        text-align: center;
       }
 }
