--- a/src/css/home.css
+++ b/src/css/home.css
@@ -70,3 +70,66 @@
         text-align: center;
       }
 }
+.feature_card_container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.feature_card{
+  width: 350px;
+  overflow: hidden;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
+  border-radius: 5px;
+  transition: all 0.2s;
+}
+.feature_card_img{
+  width: 100%;
+  transition: all 0.2s;
+  object-fit: cover;
+  background-position: bottom;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 80%;
+  opacity: 0;
+  transition: .5s ease;
+  background-image: linear-gradient(red, blue);
+  border-radius: 0px 0px 250px 0px;
+}
+.overlay .text{
+  color: white;
+}
+.feature_card_img_container{
+  height: 200px;
+  transition: all 0.2s;
+  overflow: hidden;
+  position: relative;
+}
+.feature_card_text{
+  margin:10px;
+}
+.feature_card_text h3{
+  color:#36B37E;
+}
+.feature_card:hover{
+  box-shadow: 15px 15px 30px -5px rgba(0 ,0,0,0.5);
+}
+.feature_card:hover .feature_card_img{
+  	transform: scale(1.5) rotate(15deg);
+}
+
+.feature_card:hover .overlay{
+  opacity: 0.7;
+}
+
+.explore_link{
+  color:green;
+  float: right;
+  margin-bottom: 10px;
+}
