--- a/src/index.css
+++ b/src/index.css
@@ -393,3 +393,11 @@ box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
 .details{
   margin: 60px 10px;
 }
+
+.footer_link{
+  color: white;
+}
+.footer_link:hover{
+  color: white;
+  text-decoration: none;
+}
