--- a/src/index.css
+++ b/src/index.css
@@ -332,6 +332,29 @@ box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
   top: 40%;
   left: 37%;
 }
+.chat-icon{
+  width:50px;
+  height: 50px;
+  position: fixed;
+  z-index: 1000;
+  bottom: 100px;
+  right: 10px;
+  color: floralwhite;
+  background-image: linear-gradient(to right, #97c74e, #2ab9a5 );
+  border-radius: 100%;
+  box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.5);
+}
+.chatass
+{
+  position: fixed;
+  bottom: 10px;
+  right: 30px;
+}
+.chat-icon>i{
+    position: absolute;
+    top: 30%;
+    left: 30%;
+}
 .navLink>a{
   margin-left: 20px;
 }
